--- a/roles/testnode/defaults/main.yml
+++ b/roles/testnode/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
-mirror_host: apt-mirror.sepia.ceph.com
+mirror_host: mirrors.aliyun.com
 git_mirror_host: git.ceph.com
 key_host: download.ceph.com
-gitbuilder_host: gitbuilder.ceph.com
+gitbuilder_host: 172.25.60.213
 pip_mirror_url: "http://{{ mirror_host }}/pypi/simple"
 
 # yum repos common to a major version or distro
