--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -14,22 +14,22 @@ use_satellite: false
 kerberos_realm: EXAMPLE.COM
 
 epel_mirror_baseurl: "http://mirrors.aliyun.com/epel"
-#epel_repos:
-#  epel:
-#    name: "Extra Packages for Enterprise Linux"
-#    baseurl: "{{ epel_mirror_baseurl }}/{{ ansible_distribution_major_version }}/$basearch"
+epel_repos:
+  epel:
+    name: "Extra Packages for Enterprise Linux"
+    baseurl: "{{ epel_mirror_baseurl }}/{{ ansible_distribution_major_version }}/$basearch"
 #    mirrorlist: file:///etc/yum.repos.d/epel-mirrorlist
-#    failovermethod: priority
-#    # ternary requires ansible >= 1.9
-#    enabled: "{{ enable_epel | ternary(1, 0) }}"
-#    gpgcheck: 0
-#  epel-testing:
-#    name: "Extra Packages for Enterprise Linux - Testing"
-#    baseurl: "{{ epel_mirror_baseurl }}/testing/{{ ansible_distribution_major_version }}/$basearch"
+    failovermethod: priority
+    # ternary requires ansible >= 1.9
+    enabled: "{{ enable_epel | ternary(1, 0) }}"
+    gpgcheck: 0
+  epel-testing:
+    name: "Extra Packages for Enterprise Linux - Testing"
+    baseurl: "{{ epel_mirror_baseurl }}/testing/{{ ansible_distribution_major_version }}/$basearch"
 #    mirrorlist: file:///etc/yum.repos.d/epel-testing-mirrorlist
-#    failovermethod: priority
-#    enabled: 0
-#    gpgcheck: 0
+    failovermethod: priority
+    enabled: 0
+    gpgcheck: 0
 
 # Override in secrets repo
 beta_repos: {}
